# GameOfLife

./: CMakeLists.txt  README.md  board_tests.c  main.c  setup.c  setup.h  table.c  table.h
.github/workflows/: ci.yml
board/: CMakeLists.txt  board.c  board.h
docs/html/: annotated.html  annotated_dup.js  board_8c.html  board_8c.js  board_8h.html  board_8h.js  board_8h_source.html  classes.html  dir_11bc0974ce736ce9a6fadebbeb7a8314.html  dir_11bc0974ce736ce9a6fadebbeb7a8314.js  dir_69c0ad47d15d71cfac8e0d206e4e350d.html  dir_7149141a7e3af1ee95dfb0598e371427.html  dir_7149141a7e3af1ee95dfb0598e371427.js  files.html  files_dup.js  globals.html  globals_func.html  gui_8h_source.html  index.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html  struct_board.html  struct_board.js
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  pages_1.js  searchdata.js
gui/: CMakeLists.txt  gui.c  gui.h
